// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utility functions downloadLibrarires installs the correct libraries 1`] = `
[
  [
    "Test.A",
    User {
      "canCreateRestricted": true,
      "canInstallRecommended": true,
      "canUpdateAndInstallLibraries": true,
      "email": "test@openstax.com",
      "id": "1",
      "name": "Mock User",
      "type": "local",
    },
  ],
  [
    "Test.B",
    User {
      "canCreateRestricted": true,
      "canInstallRecommended": true,
      "canUpdateAndInstallLibraries": true,
      "email": "test@openstax.com",
      "id": "1",
      "name": "Mock User",
      "type": "local",
    },
  ],
]
`;

exports[`Utility functions extractArchive extracts all files 1`] = `
{
  "a.txt": "",
  "b.txt": "",
  "c.txt": "",
}
`;

exports[`Utility functions extractArchive extracts selected files 1`] = `
{
  "a.txt": "",
}
`;

exports[`Utility functions parseBooksXML gets values and sets defaults 1`] = `
{
  "booksRoot": "/collections",
  "mediaRoot": "/media",
  "pagesRoot": "/modules",
  "privateRoot": "/private",
  "publicRoot": "test",
}
`;
